  to GPR#1250.)
  (Mark Shinwell)

- GPR#1304: Mark registers clobbered by PLT stubs as destroyed across
  allocations.
  (Mark Shinwell, Xavier Clerc, report and initial debugging by
  Valentin Gatien-Baron)

- GPR#1752: do not alias function arguments to sigprocmask.
  (Anil Madhavapeddy)

- GPR#1753: avoid potential off-by-one overflow in debugger socket path length.
  (Anil Madhavapeddy)

OCaml 4.05.0 (13 Jul 2017):
---------------------------

(Changes that can break existing programs are marked with a "*")

### Language features:

### Code generation and optimizations:

- MPR#7201, GPR#954: Correct wrong optimisation of "0 / <expr>"
  and "0 mod <expr>" in the case when <expr> was a non-constant
  evaluating to zero
  (Mark Shinwell, review by Gabriel Scherer, Leo White and Xavier Leroy)

- MPR#7357, GPR#832: Improve compilation time for toplevel
  include(struct ... end : sig ... end)
  (Alain Frisch, report by Hongbo Zhang, review by Jacques Garrigue)

- MPR#7533, GPR#1173: Correctly perform side effects for certain
  cases of "/" and "mod"
  (Mark Shinwell, report by Jan Mitgaard)

- GPR#504: Instrumentation support for fuzzing with afl-fuzz.
  (Stephen Dolan, review by Alain Frisch, Pierre Chambart, Mark
  Shinwell, Gabriel Scherer and Damien Doligez)

- GPR#863, GPR#1068, GPR#1069: Optimise matches with constant
  results to lookup tables.
  (Stephen Dolan, review by Gabriel Scherer, Pierre Chambart,
  Mark Shinwell, and bug report by Gabriel Scherer)

- GPR#1150: Fix typo in arm64 assembler directives
  (KC Sivaramakrishnan)

### Runtime system:

- MPR#385, GPR#953: Add caml_startup_exn
  (Mark Shinwell)

- MPR#7423, GPR#946: expose new exception-raising functions
  `void caml_{failwith,invalid_argument}_value(value msg)`
  in addition to
  `void caml_{failwith,invalid_argument}(char const *msg)`.
  The previous functions would not free their message argument, so
  were inconvient for dynamically-allocated messages; the messages